# slack-agent-cli

./: .env.example  .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  requirements.txt
npm/: find-python.js  paths.js
scripts/: check-version.js  postinstall.js
src/slack_agent_cli/: __init__.py  __main__.py  server.py
src/slack_agent_cli/cli/: __main__.py  main.py
src/slack_agent_cli/core/: output.py
src/slack_agent_cli/operations/: __init__.py  search.py
src/slack_agent_cli/tools/: __init__.py  channels.py  search.py  users.py
src/slack_agent_cli/utils/: slack_client.py
src/slack_mcp_server/: __init__.py  __main__.py  server.py
src/slack_mcp_server/cli/: __init__.py  __main__.py
src/slack_mcp_server/core/: __init__.py
src/slack_mcp_server/operations/: channels.py  messages.py  users.py
src/slack_mcp_server/tools/: channels.py  messages.py  search.py  users.py
src/slack_mcp_server/utils/: __init__.py  slack_client.py
