[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-mcp-server"
version = "0.1.0"
description = "MCP server for Slack API integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brandon Charleson"}
]
dependencies = [
    "mcp>=1.23.0",
    "slack-sdk>=3.39.0",
    "python-dotenv>=1.2.0",
]

[project.scripts]
slack-mcp-server = "slack_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

